TAG: qcreports_db-4-4-1-4
DATE: 01/25/2011
STAFF: lec
CHANGES:
1) TR10523/ALL_MPAnnot.py/Total MP Annotations per Gene

TAG: qcreports_db-4-4-1-3
DATE: 01/19/2011
STAFF: lec
CHANGES:
1) mgd/MRK_NoENSEMBL.py;TR10541/added history/fix 'lOG'/added exclude/include into to header

TAG: qcreports_db-4-4-1-2
DATE: 1/4/2011
STAFF: dbm
CHANGES:
1) qcr.html: removed link to crossload (retired)

TAG: qcreports_db-4-4-1-1
DATE: 12/28/2010
STAFF: lec
CHANGES:
1) TR10501/MRK_NomenNotInformative.sql

TAG: qcreports_db-4-4-0-22
DATE: 11/24/2010
STAFF: lec
CHANGES:
1) TR10468/GXD_ImageCheck.sql; copyright bug

TAG: qcreports_db-4-4-0-21
DATE: 11/23/2010
STAFF: lec
CHANGES:
1) mgd/ALL_UncodedReference.py 
   add TAB after column 1

TAG: qcreports_db-4-4-0-20
DATE: 11/16/2010
STAFF: lec
CHANGES:
1) TR10451/retire
   GXD_SpecNoImage.sql
   GXD_SpecImageDiffFigure.sql

TAG: qcreports_db-4-4-0-19
DATE: 11/16/2010
STAFF: lec
CHANGES:
1) TR10458/remove copy of :/data/seqdbs/blast/gb/gbmusnomen/gbmusnomen
   to /usr/local/mgi/private/www/hugo/gbmusnomen

TAG: qcreports_db-4-4-0-18
TAG: qcreports_db-4-4-0-17
TAG: qcreports_db-4-4-0-16
DATE: 11/02/2010/ 11/11/2010
STAFF: lec
CHANGES:
1) TR10437/GO_stats.py
2) temporarly removed HMD_SymbolDiffs2 until we can
   resolved whether this report is actually used
   HMD_SymbolDiffs.py (HMD_SymbolDiffs2, HMD_SymbolDiffs4)

TAG: qcreports_db-4-4-0-15
TAG: qcreports_db-4-4-0-14
DATE: 11/02/2010
STAFF: lec
CHANGES:
1) TR10434/archive/remove cleanup

2) moved to monthly
   SEQ_RepTransGenomic.py
   GXD_GenotypeHemi.sql
   GXD_KnockInGene.sql
   GXD_DupPrimers.sql
   GXD_SeqID.py
   PRB_Reference.sql
   GXD_Transgenic.py

3) moved to weekly

   GXD_NonGeneMarkers.py
   GXD_FullCode.py
   GXD_GenotypeNA.sql
   GXD_GelBand.py
   GXD_SpecNoImage.sql
   GXD_SpecImageDiffFigure.sql
   GXD_NoSequence.py

4) archived (64)

   ALL_GeneTrap.py
   MRK_MarkerClip.sql
   ALL_Priority.py
   ALL_ImmuneAnnot.py
   ALL_TransgeneDiff.sql

   MLD_Chromosome.sql