@@ -164,6 +164,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/VOC_GOObsolete.rpt">Markers with Annotations to Obsolete GO Terms</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_GORCA.html">Genes with GO Annotations of evidence RCA only and with references that are selected for GO but have not been used</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GO_Combined_Report.rpt">Combined QC Report</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOAnnot.rpt">Total GO Annotations per Gene</A> <B>(jblake)</B>
 </OL>
 
 <A NAME="mtb"><B>MTB (dab, dmk)</B></A>
@@ -273,7 +274,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 
 <A NAME="dataloads"><B>Data Loads</B></A>
 <OL>
-<LI><A HREF="/usrlocalmgi/live/dataload/egload/index.html">EntrezGene Load Mouse</A> <B>(yz)</B>
+<LI><A HREF="/usrlocalmgi/live/dataload/egload/index.html">EntrezGene Load Mouse</A> <B>(yz,djr)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/entrezgeneload/index.html">EntrezGene Load Human/Rat/etc</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/uniprotload">UniProt Load Data and Logs</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/unigeneload">UniGene Load</A>
